changes to controllers, service layers, daos, model classes.

--- a/src/main/resources/static/Index.html
+++ b/src/main/resources/static/Index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Link Navigation Testing Page</title>
+<title>Make My Trip Inspired Flight and Hotel Booking platform</title>
 </head>
 <body>
+<a href = "adminlogin">Click here for admin login page</a>
 
 </body>
 </html>
