--- a/src/main/resources/static/Index.html
+++ b/src/main/resources/static/Index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <a href = "adminlogin">Click here for admin login page</a>
+<a href = "goAddHotel">go to add hotel page</a>
 
 </body>
 </html>
