--- a/src/main/resources/static/Index.html
+++ b/src/main/resources/static/Index.html
@@ -11,7 +11,8 @@
            <div class="dropdown">
   <p class="dropbtn">Profile</p>
   <div class="dropdown-content">
-  <a href="printUserDetails">View Profile</a>
+ <a href="userLoginNav">Login</a>
+<!--    <a href="userLogout">logout</a> -->
 <!--   <a href="updateUserDetails">Update Profile</a> -->
 <!--   <a href="viewUserAddress">View Address</a> -->
 <!--   <a href="addAddressToUser">Add Address</a> -->
@@ -22,29 +23,19 @@
   <p class="dropbtn">Hotels</p>
   <div class="dropdown-content">
   <a href="searchHotels" >Search Hotels</a>
-  <a href="Update Profile">My Hotel Bookings</a>
+  <a href="viewMyHotelBooking">My Hotel Bookings</a>
   </div>
   </div>
   <div class="dropdown">
   <p class="dropbtn">Flights</p>
   <div class="dropdown-content">
   <a href="searchFlight">Search Flights</a>
-  <a href="Update Profile">My Flights Bookings</a>
+ <a href="viewMyFlightBooking">My Flights Bookings</a>
   </div>
   </div>
-  <div class="dropdown">
-  <p class="dropbtn">Contact</p>
-  <div class="dropdown-content">
-  <a href="View Profile">View Contacts</a>
-  </div>
-  </div>
-  <div class="dropdown">
-  <p class="dropbtn">Help</p>
-  <div class="dropdown-content">
-  <a href="View Profile">Contact Us</a>
-  
-  </div>
-  </div>
+ 
+ 
+
    <div class="dropdown">
   <p class="dropbtn">Admin Login</p>
   <div class="dropdown-content">
